--- a/index.html
+++ b/index.html
@@ -214,26 +214,26 @@
             <div class="border"></div>
             <div class="grid">
                 <div class="grid-esquerda">
-                    <iframe width="550" height="334" src="https://www.youtube.com/embed/26cn50JtuGw" frameborder="0"
+                    <iframe class="youtube-video" src="https://www.youtube.com/embed/26cn50JtuGw" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div></div>
                 <div class="grid-direita">
-                    <iframe width="550" height="334" src="https://www.youtube.com/embed/VPeIAdB5AQg" frameborder="0"
+                    <iframe class="youtube-video" src="https://www.youtube.com/embed/VPeIAdB5AQg" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
             </div>
             <div class="grid">
                 <div class="grid-esquerda">
-                    <iframe width="550" height="334" src="https://www.youtube.com/embed/5tdyX82aGcg" frameborder="0"
+                    <iframe class="youtube-video" src="https://www.youtube.com/embed/5tdyX82aGcg" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div></div>
                 <div class="grid-direita">
-                    <iframe width="550" height="334" src="https://www.youtube.com/embed/wWJ1MjKZT8o" frameborder="0"
+                    <iframe class="youtube-video" src="https://www.youtube.com/embed/wWJ1MjKZT8o" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         -allowfullscreen></iframe>
                 </div>
@@ -246,13 +246,13 @@
                 <h2>Parceiros de Atendimento</h2>
                 <div class="border"></div>
                 <div class="grid">
-                    <div class="grid-esquerda">
+                    <div class="grid-esquerda centralizar">
                         <a href="https://web.whatsapp.com/send?phone=5519995735858">
                             <img class="parceiro-imagem " src="./estilo/imagens/vinicius-fofo.png" alt="Vinicius gatinho">
                         </a>
                     </div>
-                    <div></div>
-                    <div class="grid-direita">
+                    <div class="separador"></div>
+                    <div class="grid-direita centralizar">
                         <a href="https://web.whatsapp.com/send?phone=5518996145924">
                             <img class="parceiro-imagem" src="./estilo/imagens/alberto-gostoso-terapeuta.png" alt="Alberto delicia">
                         </a>
@@ -267,9 +267,9 @@
             <h2>Nos encontre nas redes sociais</h2>
             <div class="border"></div>
             <div class="barra-icone">
-                <img class="icone" src="./estilo/imagens/youtube.svg" alt="logo Youtube">
-                <img class="icone" src="./estilo/imagens/instagram.svg" alt="logo instagram">
-                <img class="icone" src="./estilo/imagens/facebook.svg" alt="logo facebook">
+                <a href="https://www.youtube.com/c/RobertoCMundstein"><img class="icone" src="./estilo/imagens/youtube.svg" alt="logo Youtube"></a> 
+                <a href="https://www.instagram.com/robertomundstein/"><img class="icone" src="./estilo/imagens/instagram.svg" alt="logo instagram"></a>
+                <a href="https://www.facebook.com/robertocarlos.mundstein"><img class="icone" src="./estilo/imagens/facebook.svg" alt="logo facebook"></a>
             </div>
                 </div>
             </div>
