Arruamdo posiçao do script jquery para o bootstrap funcionar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header id="inicio" class="topo">
         <nav class="nav navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#inicio">
                 <img class="menu-logo" src="estilo/imagens/logo-roberto-header.png" alt="logo profissão transformação"
                     height="55" width="180" loading="lazy">
             </a>
@@ -277,10 +277,9 @@
     </div>
     
 </footer>
-
+    <script src="./estilo/js/jquery-3.5.1.min.js"></script>
     <script src="./estilo/js/bootstrap.bundle.min.js"></script>
     <script src="./estilo/js/bootstrap.min.js"></script>
-    <script src="./estilo/js/jquery-3.5.1.min.js"></script>
     <script src="./estilo/js/nav.js"></script>
 </body>
 
