--- a/index.html
+++ b/index.html
@@ -75,64 +75,52 @@
             </div>
         </article>
     </section>
-    <section class="container atendimentos">
-        <h2 class="titulo-2">ATENDIMENTOS</h2>
-        <article class="artigo">
-            <h2>REIKI</h2>
-            <div class="border"></div>
-            <div class="grid">
-                <div class="grid-esquerda">
-                    <p>Terapia vibracional aplicada pela imposição das mãos, toque sutil ou pelo sopro. O Reiki pode ser
-                        aplicado presencialmente ou à distância. Traz relaxamento, diminui a insônia, trata dores
-                        crônicas e agudas, auxilia no tratamento da depressão, síndromes, ansiedade, TDAH e muito mais.
-                        O Reiki é hoje uma das metodologias energéticas mais utilizadas em hospitais e clínicas de todo
-                        o mundo. No Brasil já é figura entre as terapias complementares aceitas pelo Sistema Único de
-                        Saúde – SUS.
-                    </p>
+    <section class="container-fluid parceiros">
+        <div class="container">
+            <article class="artigo">
+                <h2>ATENDIMENTOS</h2>
+                <div class="border"></div>
+                    <div class="centralizar-roberto centralizar">
+                            <div class="card roberto">
+                                <a href="https://web.whatsapp.com/send?phone=5524981225434">
+                                <img src="./estilo/imagens/Roberto-Mundstein-lenda-das-lendas.png" class="card-img-top"
+                                    alt="Roberto Lenda das Lendas">
+                                <div class="card-body">
+                                    <btn class="btn btn-primary">Marque um atendimento</btn>
+                                </div>
+                                </a>
+                            </div>
+                    </div>
+                <div class="separador"></div>
+                <div class="grid centralizar">
+                    <div class="grid-esquerda centralizar">
+                            <div class="card parceiro-imagem">
+                                <a href="https://web.whatsapp.com/send?phone=5519995735858">
+                                <img src="./estilo/imagens/vinicius-fofo.png" class="card-img-top"
+                                    alt="Vinicius gatinho">
+                                <div class="card-body">
+                                    <btn class="btn btn-primary">Marque um atendimento</btn>
+                                </div>
+                                </a>
+                            </div>
+                    </div>
+                    <div class="separador"></div>
+                    <div class="grid-direita centralizar">
+                            <div class="card parceiro-imagem">
+                                <a href="https://web.whatsapp.com/send?phone=5518996145924">
+                                <img src="./estilo/imagens/alberto-gostoso-terapeuta.png" class="card-img-top"
+                                    alt="Alberto delicia">
+                                <div class="card-body">
+                                    <btn class="btn btn-primary">Marque um atendimento</btn>
+                                </div>
+                                </a>
+                            </div>
+                    </div>
                 </div>
-                <div></div>
-                <div class="grid-direita">
-                    <img class="artigo-imagem" src="./estilo/imagens/Roberto-Mundstein-1.png"
-                        alt="Roberto carequinha escrevendo e brilhando">
-                </div>
-            </div>
-        </article>
-        <article class="artigo">
-            <h2>Aconselhamento energético - Magia hermetista</h2>
-            <div class="border"></div>
-            <div class="grid">
-                <div class="grid-esquerda">
-                    <img class="artigo-imagem" src="./estilo/imagens/Roberto-thot.png"
-                        alt="Roberto carequinha escrevendo e brilhando">
-                </div>
-                <div></div>
-                <div class="grid-direita">
-                    <p>Peso nos ombros, dores e sensações não explicadas pela medicina, sensação de cansaço, prostração…
-                        Através do uso da cromoterapia, da fitoenergética, cristais, aromaterapia, mandalas, banhos,
-                        fitoterapia, tudo com base no conhecimento magístico hermetista, podemos ajudar você a livrar-se
-                        desses males.</p>
-                </div>
-            </div>
-        </article>
-        <article class="artigo">
-            <h2>Numerologia</h2>
-            <div class="border"></div>
-            <div class="grid">
-                <div class="grid-esquerda">
-                    <p>Numerologia é um método que analisa nosso perfil a partir do significado de cada número. A partir
-                        da data de nascimento, da soma dos valores das letras do nome, utilizando um gráfico para
-                        distribuição dos números, podemos realizar uma analise capaz de direcionar nossos caminhos e
-                        promover uma bela base para nos tornarmos pessoas melhores, mais felizes e com alta auto estima.
-                    </p>
-                </div>
-                <div></div>
-                <div class="grid-direita">
-                    <img class="artigo-imagem" src="./estilo/imagens/numerologia.webp"
-                        alt="Roberto carequinha escrevendo e brilhando">
-                </div>
-            </div>
-        </article>
+            </article>
+        </div>
     </section>
+
     <section class="container">
         <h2 class="titulo-2">Materiais e cursos</h2>
         <article class="artigo">
@@ -152,7 +140,7 @@
                         Por apenas R$ 10,00, você pode ajudar na melhoria do canal.<br />
 
                         2021 será o ano do movimento, então dê os primeiros passos rumo à sua transformação!</p>
-                    <a href="https://go.hotmart.com/W45457685M">Aqui vai um botão comprar</a>
+                    <a href="https://go.hotmart.com/W45457685M"><btn class="btn btn-primary">Compre Agora</btn></a>
                 </div>
             </div>
         </article>
@@ -164,7 +152,7 @@
                     <p>Reiki Hermetista é uma releitura do sistema Usui Reiki Ryoho, baseada na filosofia hermetista e
                         trazendo o Reiki para o mundo ocultista. O reikiano hermetista utiliza a manipulação energética
                         para ativar sigilos, alimentar servidores, criar círculos de proteção, realizar banimentos, além
-                        de...<a href="https://profissaotransformacao.com/reikihermetista/">saiba mais!</a></p>
+                        de...<a href="https://profissaotransformacao.com/reikihermetista/"><btn class="btn btn-primary">Saiba Mais</btn></a></p>
                 </div>
                 <div></div>
                 <div class="grid-direita">
@@ -185,7 +173,7 @@
                 <div class="grid-direita">
                     <p>Autodefesa energética e espiritual é um curso que te ensina a se proteger e diminuir os problemas
                         espirituais que você sofre, ele te auxilia te empoderando e te deixando no controle de suas
-                        defesas, assim você...<a href="https://profissaotransformacao.com/autodefesa/">saiba mais!</a>
+                        defesas, assim você...<a href="https://profissaotransformacao.com/autodefesa/"><btn class="btn btn-primary">Saiba Mais</btn></a>
                     </p>
                 </div>
             </div>
@@ -198,7 +186,7 @@
                     <p>A cromoterapia é um tipo de tratamento que utiliza ondas emitidas pelas cores como o amarelo,
                         vermelho, azul, verde ou laranja, atuando em células do corpo e melhorando o equilíbrio entre o
                         corpo e a mente, sendo que cada cor apresenta uma função terapêutica diferente, com o curso você
-                        aprenderá....<a href="https://www.tuasaude.com/beneficios-da-cromoterapia/">saiba mais!</a></p>
+                        aprenderá....<a href="https://www.tuasaude.com/beneficios-da-cromoterapia/"><btn class="btn btn-primary">Saiba Mais</btn></a></p>
                 </div>
                 <div></div>
                 <div class="grid-direita">
@@ -208,6 +196,7 @@
             </div>
         </article>
     </section>
+
     <section class="container">
         <article class="artigo">
             <h2>Algumas produções</h2>
@@ -240,43 +229,25 @@
 
         </article>
     </section>
-    <section class="container-fluid parceiros">
+    <footer class="container-fluid rodape">
         <div class="container">
-            <article class="artigo">
-                <h2>Parceiros de Atendimento</h2>
+            <article class="artigo artigo-footer">
+                <h2>Nos encontre nas redes sociais</h2>
                 <div class="border"></div>
-                <div class="grid">
-                    <div class="grid-esquerda centralizar">
-                        <a href="https://web.whatsapp.com/send?phone=5519995735858">
-                            <img class="parceiro-imagem " src="./estilo/imagens/vinicius-fofo.png" alt="Vinicius gatinho">
-                        </a>
-                    </div>
-                    <div class="separador"></div>
-                    <div class="grid-direita centralizar">
-                        <a href="https://web.whatsapp.com/send?phone=5518996145924">
-                            <img class="parceiro-imagem" src="./estilo/imagens/alberto-gostoso-terapeuta.png" alt="Alberto delicia">
-                        </a>
-                    </div>
+                <div class="barra-icone">
+                    <a href="https://www.youtube.com/c/RobertoCMundstein"><img class="icone"
+                            src="./estilo/imagens/youtube.svg" alt="logo Youtube"></a>
+                    <a href="https://www.instagram.com/robertomundstein/"><img class="icone"
+                            src="./estilo/imagens/instagram.svg" alt="logo instagram"></a>
+                    <a href="https://www.facebook.com/robertocarlos.mundstein"><img class="icone"
+                            src="./estilo/imagens/facebook.svg" alt="logo facebook"></a>
                 </div>
-            </article>
         </div>
-    </section>
-<footer class="container-fluid rodape">
-    <div class="container">
-        <article class="artigo artigo-footer">
-            <h2>Nos encontre nas redes sociais</h2>
-            <div class="border"></div>
-            <div class="barra-icone">
-                <a href="https://www.youtube.com/c/RobertoCMundstein"><img class="icone" src="./estilo/imagens/youtube.svg" alt="logo Youtube"></a> 
-                <a href="https://www.instagram.com/robertomundstein/"><img class="icone" src="./estilo/imagens/instagram.svg" alt="logo instagram"></a>
-                <a href="https://www.facebook.com/robertocarlos.mundstein"><img class="icone" src="./estilo/imagens/facebook.svg" alt="logo facebook"></a>
-            </div>
-                </div>
-            </div>
+        </div>
         </article>
-    </div>
-    
-</footer>
+        </div>
+
+    </footer>
     <script src="./estilo/js/jquery-3.5.1.min.js"></script>
     <script src="./estilo/js/bootstrap.bundle.min.js"></script>
     <script src="./estilo/js/bootstrap.min.js"></script>
