bug github pages

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="card parceiro-imagem">
                                 <a href="https://web.whatsapp.com/send?phone=5519995735858">
                                 <img src="./estilo/imagens/vinicius-fofo.png" class="card-img-top"
-                                    alt="Vinicius gatinho">
+                                    alt="Vinicius gatinho.">
                                 <div class="card-body">
                                     <btn class="btn btn-primary">Marque um atendimento</btn>
                                 </div>
