melhorado imagens dos atendentes

--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
                                 <a href="https://web.whatsapp.com/send?phone=5524981225434">
                                 <img src="./estilo/imagens/Roberto-Mundstein-lenda-das-lendas.png" class="card-img-top"
                                     alt="Roberto Lenda das Lendas">
+                                    <p>
+                                        Magista<br/>
+                                        Mestre Reiki<br/>
+                                        Cromoterapeuta<br/>
+                                        Numerólogo<br/>
+                                        Conselheiro Energético<br/>
+                                    </p>
                                 <div class="card-body">
                                     <btn class="btn btn-primary">Marque um atendimento</btn>
                                 </div>
@@ -98,6 +105,10 @@
                                 <a href="https://web.whatsapp.com/send?phone=5519995735858">
                                 <img src="./estilo/imagens/vinicius-fofo.png" class="card-img-top"
                                     alt="Vinicius gatinho.">
+                                    <p>
+                                        Mestre Reiki<br/>
+                                        Iniciado Ogom<br/>
+                                    </p>
                                 <div class="card-body">
                                     <btn class="btn btn-primary">Marque um atendimento</btn>
                                 </div>
@@ -110,6 +121,10 @@
                                 <a href="https://web.whatsapp.com/send?phone=5518996145924">
                                 <img src="./estilo/imagens/alberto-gostoso-terapeuta.png" class="card-img-top"
                                     alt="Alberto delicia">
+                                    <p>
+                                        Magista<br/>
+                                        Terapeuta Reiki<br/>
+                                    </p>
                                 <div class="card-body">
                                     <btn class="btn btn-primary">Marque um atendimento</btn>
                                 </div>
