Tudo mais colorido

--- a/index.html
+++ b/index.html
@@ -75,69 +75,11 @@
             </div>
         </article>
     </section>
-    <section class="container-fluid parceiros">
-        <div class="container">
-            <article class="artigo">
-                <h2>ATENDIMENTOS</h2>
-                <div class="border"></div>
-                    <div class="centralizar-roberto centralizar">
-                            <div class="card roberto">
-                                <a href="https://web.whatsapp.com/send?phone=5524981225434">
-                                <img src="./estilo/imagens/Roberto-Mundstein-lenda-das-lendas.png" class="card-img-top"
-                                    alt="Roberto Lenda das Lendas">
-                                    <p>
-                                        Magista<br/>
-                                        Mestre Reiki<br/>
-                                        Cromoterapeuta<br/>
-                                        Numerólogo<br/>
-                                        Conselheiro Energético<br/>
-                                    </p>
-                                <div class="card-body">
-                                    <btn class="btn btn-primary">Marque um atendimento</btn>
-                                </div>
-                                </a>
-                            </div>
-                    </div>
-                <div class="separador"></div>
-                <div class="grid centralizar">
-                    <div class="grid-esquerda centralizar">
-                            <div class="card parceiro-imagem">
-                                <a href="https://web.whatsapp.com/send?phone=5519995735858">
-                                <img src="./estilo/imagens/vinicius-fofo.png" class="card-img-top"
-                                    alt="Vinicius gatinho.">
-                                    <p>
-                                        Mestre Reiki<br/>
-                                        Iniciado Ogom<br/>
-                                    </p>
-                                <div class="card-body">
-                                    <btn class="btn btn-primary">Marque um atendimento</btn>
-                                </div>
-                                </a>
-                            </div>
-                    </div>
-                    <div class="separador"></div>
-                    <div class="grid-direita centralizar">
-                            <div class="card parceiro-imagem">
-                                <a href="https://web.whatsapp.com/send?phone=5518996145924">
-                                <img src="./estilo/imagens/alberto-gostoso-terapeuta.png" class="card-img-top"
-                                    alt="Alberto delicia">
-                                    <p>
-                                        Magista<br/>
-                                        Terapeuta Reiki<br/>
-                                    </p>
-                                <div class="card-body">
-                                    <btn class="btn btn-primary">Marque um atendimento</btn>
-                                </div>
-                                </a>
-                            </div>
-                    </div>
-                </div>
-            </article>
-        </div>
-    </section>
+    
 
-    <section class="container">
-        <h2 class="titulo-2">Materiais e cursos</h2>
+    <section class="container-fluid materiais">
+        <div class="container">
+            <h2 class="titulo-2">Materiais e cursos</h2>
         <article class="artigo">
             <h2>Apostila - Cinco Passos Rumo a transformação</h2>
             <div class="border"></div>
@@ -210,6 +152,69 @@
                 </div>
             </div>
         </article>
+        </div>
+        
+    </section>
+
+    <section class="container-fluid parceiros">
+        <div class="container">
+            <article class="artigo">
+                <h2>ATENDIMENTOS</h2>
+                <div class="border"></div>
+                    <div class="centralizar-roberto centralizar">
+                            <div class="card roberto">
+                                <a href="https://web.whatsapp.com/send?phone=5524981225434">
+                                <img src="./estilo/imagens/Roberto-Mundstein-lenda-das-lendas.png" class="card-img-top"
+                                    alt="Roberto Lenda das Lendas">
+                                    <p>
+                                        Magista<br/>
+                                        Mestre Reiki<br/>
+                                        Cromoterapeuta<br/>
+                                        Numerólogo<br/>
+                                        Conselheiro Energético<br/>
+                                    </p>
+                                <div class="card-body">
+                                    <btn class="btn btn-primary">Marque um atendimento</btn>
+                                </div>
+                                </a>
+                            </div>
+                    </div>
+                <div class="separador"></div>
+                <div class="grid centralizar">
+                    <div class="grid-esquerda centralizar">
+                            <div class="card parceiro-imagem">
+                                <a href="https://web.whatsapp.com/send?phone=5519995735858">
+                                <img src="./estilo/imagens/vinicius-fofo.png" class="card-img-top"
+                                    alt="Vinicius gatinho.">
+                                    <p>
+                                        Mestre Reiki<br/>
+                                        Iniciado Ogom<br/>
+                                    </p>
+                                <div class="card-body">
+                                    <btn class="btn btn-primary">Marque um atendimento</btn>
+                                </div>
+                                </a>
+                            </div>
+                    </div>
+                    <div class="separador"></div>
+                    <div class="grid-direita centralizar">
+                            <div class="card parceiro-imagem">
+                                <a href="https://web.whatsapp.com/send?phone=5518996145924">
+                                <img src="./estilo/imagens/alberto-gostoso-terapeuta.png" class="card-img-top"
+                                    alt="Alberto delicia">
+                                    <p>
+                                        Magista<br/>
+                                        Terapeuta Reiki<br/>
+                                    </p>
+                                <div class="card-body">
+                                    <btn class="btn btn-primary">Marque um atendimento</btn>
+                                </div>
+                                </a>
+                            </div>
+                    </div>
+                </div>
+            </article>
+        </div>
     </section>
 
     <section class="container">
