criada paginas dos grupos

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>Reiki Hermetista é uma releitura do sistema Usui Reiki Ryoho, baseada na filosofia hermetista e
                         trazendo o Reiki para o mundo ocultista. O reikiano hermetista utiliza a manipulação energética
                         para ativar sigilos, alimentar servidores, criar círculos de proteção, realizar banimentos, além
-                        de...<a href="https://profissaotransformacao.com/reikihermetista/"><btn class="btn btn-primary">Saiba Mais</btn></a></p>
+                        de...<a href="./ReikiHermetista.html"><btn class="btn btn-primary">Saiba Mais</btn></a></p>
                 </div>
                 <div></div>
                 <div class="grid-direita">
@@ -130,7 +130,7 @@
                 <div class="grid-direita">
                     <p>Autodefesa energética e espiritual é um curso que te ensina a se proteger e diminuir os problemas
                         espirituais que você sofre, ele te auxilia te empoderando e te deixando no controle de suas
-                        defesas, assim você...<a href="https://profissaotransformacao.com/autodefesa/"><btn class="btn btn-primary">Saiba Mais</btn></a>
+                        defesas, assim você...<a href="./autodefesa.html"><btn class="btn btn-primary">Saiba Mais</btn></a>
                     </p>
                 </div>
             </div>
